# Depth_Normal_Fusion

./: LICENSE  README.md
vision-normal-fusion/: CMakeLists.txt  README.txt  README.txt~
vision-normal-fusion/datasets/cube/: box.txt  conf.txt
vision-normal-fusion/datasets/cube/depthMaps/: normalsFiles.txt
vision-normal-fusion/datasets/south-building/: confT3D_highRes.txt  confT3D_highRes.txt~  depthMaps.txt
vision-normal-fusion/libs/D3D/src/d3d_base/: cameraMatrix.cpp  cameraMatrix.h  colorMapJet.cpp  colorMapJet.h  common.h  configFile.cpp  configFile.h  depthMap.cpp  depthMap.h  depthMapWarper.cpp  depthMapWarper.h  exception.h  fishEyeCameraMatrix.cpp  fishEyeCameraMatrix.h  fishEyeDepthMap.cpp  fishEyeDepthMap.h  fishEyeDepthMapWarper.cpp  fishEyeDepthMapWarper.h  grid.cpp  grid.h  imageTools.cpp  imageTools.h  meshToDepthMapRenderer.cpp  meshToDepthMapRenderer.h  timer.h
vision-normal-fusion/libs/D3D/src/d3d_cudaBase/: cudaCommon.h  cudaFishEyeImageProcessor.cpp  cudaFishEyeImageProcessor.cu  cudaFishEyeImageProcessor.h  deviceBuffer.cpp  deviceBuffer.cu  deviceBuffer.cuh  deviceBuffer.h  deviceImage.cpp  deviceImage.cu  deviceImage.cuh  deviceImage.h
vision-normal-fusion/libs/D3D/src/d3d_fusion/: cameraPoseGrouper.cpp  cameraPoseGrouper.cu  cameraPoseGrouper.h  cudaDepthIntegrator.cpp  cudaDepthIntegrator.cu  cudaDepthIntegrator.h  cudaDepthIntegratorBastien.cpp  cudaDepthIntegratorBastien.cu  cudaDepthIntegratorBastien.h  cudaDepthIntegratorIROS2011.cpp  cudaDepthIntegratorIROS2011.cu  cudaDepthIntegratorIROS2011.h  cudaDepthIntegratorMultiClass.cpp  cudaDepthIntegratorMultiClass.cu  cudaDepthIntegratorMultiClass.h  cudaDepthIntegratorMultiClassv2.cpp  cudaDepthIntegratorMultiClassv2.cu  cudaDepthIntegratorMultiClassv2.h  cudaFishEyeDepthIntegrator.cu  (+14 more)
vision-normal-fusion/src/: tvHistDepthIntegrator.cpp  tvHistFusion.cpp  tvHistNormalClustering.cpp  tvHistNormalFusion.cpp  tvHistNormalIntegrator.cpp
(+34 files in other folders)
